[package]
name = "banking-vesting"
version = "0.1.0"
description = "Comprehensive Banking and Vesting Platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "banking_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "6.0.0"
spl-associated-token-account = "6.0.0"
borsh = "0.10.3"
